syntax = "proto3";

message Request {
    oneof kind {
        RustImportsRequest rust_imports = 1;
        LockfileCratesRequest lockfile_crates = 2;
        CargoTomlRequest cargo_toml = 3;
        SimplifyBExprRequest simplify_bexpr = 4;
    }
}

message RustImportsRequest {
    string file_path = 1;
}

/** Extra information about the source file, used to infer rule kind (e.g. binary vs. library) when
    creating new targets and to manage crate test targets. */
message Hints {
    /** Has a main function in the top-level scope. */
    bool has_main = 1;
    /** Has at least one #[test] function. */
    bool has_test = 2;
    /** Has at least one #[proc_macro] function. */
    bool has_proc_macro = 3;
}

message KeyValue {
    string key = 1;
    string value = 2;
}

message BExprAtom {
    oneof atom {
        string value = 1;
        KeyValue key_value = 2;
    }
}

message BExprSeq {
    repeated BExpr values = 1;
}

message BExpr {
    oneof expr {
        BExprAtom atom = 1;
        bool constant = 2;
        BExpr not = 3;
        BExprSeq and = 4;
        BExprSeq or = 5;
    }
}

message Import {
    string imp = 1;
    BExpr cfg = 2;
}

// If successful, success = true and hints, imports, and test_imports are set.
// If there is an unrecoverable error, success = false and error_msg is the error message.
message RustImportsResponse {
    Hints hints = 1;
    repeated Import imports = 2;
    repeated string extern_mods = 3;
    bool success = 4;
    string error_msg = 5;
}

message LockfileCratesRequest {
    oneof lockfile {
        string lockfile_path = 1;
        string cargo_lockfile_path = 2;
    }
}

message Package {
    string name = 1;
    string crate_name = 2;
    bool proc_macro = 3;
}

message LockfileCratesResponse {
    repeated Package crates = 1;
}

message CargoTomlRequest {
    string file_path = 1;
}

message CargoCrateInfo {
    string name = 1;
    repeated string srcs = 2;
    bool proc_macro = 3;
}

message CargoTomlResponse {
    CargoCrateInfo library = 1;
    repeated CargoCrateInfo binaries = 2;
    repeated CargoCrateInfo tests = 3;
    repeated CargoCrateInfo benches = 4;
    repeated CargoCrateInfo examples = 5;
    bool success = 6;
    string error_msg = 7;
}

message SimplifyBExprRequest {
    BExpr bexpr = 1;
}

message SimplifyBExprResponse {
    BExpr bexpr = 1;
}
